newsite/home.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
@import url(//fonts.googleapis.com/earlyaccess/nicomoji.css);
@import url(//fonts.googleapis.com/earlyaccess/nikukyu.css);
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Pacifico&family=Zen+Maru+Gothic:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');

:root{
    --main-color: #101425;
    --bg-color: #15192e;
    --border-color: #2b3358;
  }

body {
    background-color: var(--bg-color);
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

html, body{
  position: fixed;
  width: 100%;
  height: 100%;
  overflow: hidden;
}



/* --------------------------- STARS ------------------------ */

/* Create a container for the stars */
#stars {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

.star {
  position: absolute;
  background-color: #FFF;
  width: 2px;
  height: 2px;
  border-radius: 50%;
  opacity: 1;
  animation: twinkling linear infinite 3s;
  transform-style: preserve-3d;
}

@keyframes twinkling {
  0% {
    opacity: 0;
    transform: translate3d(0, 0, -500px);
  }
  50% {
    opacity: 1;
    transform: translate3d(
      calc(var(--parallax-direction-x) * 3),
      calc(var(--parallax-direction-y) * 3),
      calc(var(--parallax-direction-z) * 3)
    );
  }
  100% {
    opacity: 0;
    transform: translate3d(0, 0, -500px);
  }
}

/* ---------------------- TOP RIGHT CAPTION ------------------ */

.additional-caption-top-right {
  position: absolute;
  top: -10px;
  right: 0;
  /* bottom: 2px; */
  transform: translate(0.5%, -100%);
  /* background-color: #19273c; */
  /* border: 2px solid #19273c; */
  text-align: center;
  color: white;
  font-family: 'Pacifico', cursive;
  font-size: 1em;
  opacity: 0.6;
  animation: none;
}

.additional-caption-top-right p{
  letter-spacing: .2em;
}

.song-japn{
  font-family: 'Zen Maru Gothic', sans-serif;
}

.music-icon {
  font-size: 12px;
  margin-right: 5px;
  vertical-align: middle;
}

.music-icon2{
  font-size: 12px;
  vertical-align: middle;
}

/* -------------------- MAIN BOX ------------------------ */

.box {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    /* width: calc(55% - 28px);
    height: 75vh; */
    width: 65%;
    /* max-width: 600px; */
    height: 75vh;
    background-color: var(--main-color); /* Slightly darker background color */
    border: 2px solid var(--border-color);
    display: flex;
    flex-direction: column;
    opacity: 0;
    animation: fade-in 1s ease-in-out forwards; 
    z-index: 1;
    scroll-behavior: smooth;
}

@keyframes fade-in {
    from {
        top: -50%;
        opacity: 0;
    }
    to {
        top: 50%;
        opacity: 1;
    }
}

.left-section {
  width: 80%;
  height: 200px;
  background-image: url(./images/91882132_p0.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: 'Montserrat', sans-serif;
  position: relative;
}

.right-section {
  flex: 1;
  overflow-y: scroll;
  padding: 30px;
  font-family: 'Alegreya', serif;
  color: white; /* placeholder, change later */
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  scroll-behavior: smooth;
}


/* Styles for desktop screens */
@media (min-width: 768px) {
  .box {
    flex-direction: row;
  }

  .left-section {
    width: 33%;
    height: auto;
  }

}

/* Styles for mobile screens */
@media (max-width: 767px) {
  .box {
    flex-direction: column;
    /* height: auto; */
  }

  .left-section {
    width: 100%;
    height: 300px;
  }
  .right-section{
    padding: 20px;
  }
  
}


/* ------------------ LEFT SECTION ITEMS ------------------ */

.left-items{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* background-color: rgba(0, 0, 0, 0.5); */
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  box-sizing: border-box;
}

.left-box {
  position: absolute;
  top: 10%;
  left: 50%;
  transform: translateX(-50%);
  width: 70%;
  height: 7%; 
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1px;
  text-align: center;
  font-weight: bold;
  font-size: 1em;
}


.left-box2{
  position: absolute;
  top: 20%;
  width: 70%;
  height: 20%;
  padding: 1px;
  text-align: justify;
  text-justify: inter-word;
  font-weight: 300;
  font-size: 0.8em;
  word-wrap: break-word;
}

.left-box, .left-box2{
  position: absolute;
  background-color: var(--bg-color);
  border: 2px solid var(--border-color);
  display: flex;
  flex-direction: column;
  color: white;
  font-family: 'Montserrat', sans-serif;
}


.left-box2 p{
  margin-left: 20px;
  margin-top: 20px;
  margin-right: 20px;
  letter-spacing: 0.3px;
}

.left-box2 h2{
  margin: 5px 20px 10px;
  font-size: 0.9em;
  letter-spacing: 0.2em;
  color: #dbd06a;
}


@media (max-width: 767px) {
  .left-box {
    font-size: 0.7em;
    width: 80%;
    height: 10%;
  }
  .left-box2{
    height: 35%;
    width: 80%;
    margin-top: 5%;
    font-size: 0.5em;
  }
  .left-box2 h2{
    font-size: 1em;
  }
}

/* -------------------------------------- JAP TEXT BOTTOM -------------------- */

.caption {
    position: absolute;
    bottom: 3%;
    left: 50%;
    transform: translateX(-50%);
    color: white;
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
    opacity: 0.5;
  }

.jap-text{
    color: #7280b8;
    opacity: 0.9; 
    font-weight: 500;
    letter-spacing: 5px;
    font-family: 'Nico Moji', cursive;
}



/* ---------------------------------------------------------------------------------------------------- */
/** CONTENT TIME **/

.right-items{
  /* background: white;
  border: 1px solid white; */
  height: 100%;
  color: black;
  padding: 0;
}

.item{
  /* background: red; */
  align-items: center;
  text-align: center;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 50%;
  border: 1px solid var(--border-color);
  padding: 10px;
  margin-bottom: 20px;
  padding-bottom: 10px;
}

/* --------------- FIRST RIGHT ITEM ----------------------*/
.item .image-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  box-sizing: content-box;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  transition: filter 0.5s ease-in-out;
  backface-visibility: hidden;
}

.item .image-container:hover{
  filter: brightness(200%);
}

@media (max-width: 767px){
  .right-items{
    width: 100%;
    padding: 0px;
  }
  .right-section{
    height: 50vh;
    
  }
  .item{
    width: 90%;
  }
}

.description {
  border: 1px solid var(--border-color);
  margin-top: 10px;
  display: flex;
  flex-direction: row;
  align-items: center; /* Center items vertically */
  text-align: center;
  margin-bottom: 10px;
  
}

.number-box {
  background-color: #111625;
  color: white;
  padding: 5px 10px;
  margin-right: 10px;
  width: 30px;
  font-family: 'Pacifico', cursive;
  font-size: 0.8em;
  border-right: 1px solid var(--border-color);
}

.description h1 {
  font-size: 1em;
  color: white;
  margin: 0;
  flex: 1; /* Take up remaining space */
  text-align: center;
  letter-spacing: 0.2em;
  
}

@media (max-width: 767px){
  .description{
    width: 100%;
  }
  .number-box{
    margin: 0px;
    height: 100%;
  }
  .description h1{
    font-size: 0.75em;
  }
}

hr { margin-top: 25px; margin-bottom: 25px; background-color: var(--border-color); border: none; height: 1px;}

/* -------------------- SCROLL BAR ------------------------ */

.right-section::-webkit-scrollbar {
  width: 2px; /* Adjust the width of the scrollbar */
}

.right-section::-webkit-scrollbar-track {
  background-color: var(--main-color); /* Set the background color of the scrollbar track */
}

.right-section::-webkit-scrollbar-thumb {
  background-color: #7280b8; /* Set the color of the scrollbar thumb */
  border-radius: 3px; /* Adjust the border-radius of the scrollbar thumb */
}

.right-section::-webkit-scrollbar-thumb:hover {
  background-color: #4965a0; /* Set the color of the scrollbar thumb on hover */
}

.right-section::-webkit-scrollbar-thumb:active {
  background-color: #355085; /* Set the color of the scrollbar thumb when active */
}


.image-container second{
  background-image: none;
}

